# pacotes_pypi

./: LICENSE  README.md  modelo_cfg.cfg  setup.cfg
src/: Face_Recognition.py  filterRomuere.py
src/Face_Recognition/: Face_Recognition.py
