[metadata]
name = filterRomuere
version = 0.0.1
author = Romuere Silva
author_email = romuere@ufpi.edu.br
description = Pacote para aplicar filtragem por agrupamento
long_description = file: README.mb
long_description_content_type = text/markdown
url = https://github.com/romuere/filterRomuere
classifiers = 
    Programing Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operation System :: OS Independent

[options]
package_dir = 
 = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src